[package]
name = "wanxiao-campus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
des = "0.8.1"
reqwest = { version = "0.12.1", features = ["json", "gzip", "deflate", "multipart"] }
rsa = "0.9.6"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
rand = "0.8.5"
base64 = "0.22.0"
log = "0.4.21"
env_logger = "0.11.3"
cbc = { version = "0.1.2", features = ["std"] }
sha256 = "1.5.0"
hex = "0.4.3"
aes = "0.8.4"
